--- a/index.html
+++ b/index.html
@@ -15,50 +15,102 @@
 </head>
 
 <body>
-    <section>
-        <div>
+    <section class="flex-container">
+        <div class="half-width">
             <h1>
                 ডিজিটাল তৈল কোম্পানীতে
             </h1>
             <h1>
-                <span class="">আপনাকে স্বাগত জানাই</span>
+                <span class="brand-color">আপনাকে স্বাগত জানাই</span>
             </h1>
-            <p>
-                ডিজিটাল তেল! সেটা আবার কি? খটকা লাগছে? জানতে হলে পড়ুন। তেলকূপের তেল ফুরিয়ে যেতে পারে, কিন্তু আমাদের
-                ডিজিটাল তেল
-                কখনই ফুরাবে না। এক অশেষ ডিজিটাল তেলের ভান্ডার ও নানামুখী তৈলাক্ত সেবা নিয়ে আমাদের এই ডিজিটাল তৈল
-                কোম্পানীর যাত্রা। বিশ্বে আমারাই প্রথম এবং আমরাই সেরা। ডিজিটাল তৈল এবং ডিজিটাল তৈল কোম্পানী সম্পর্কে
-                জানতে নিচের বাটনে ক্লিক করুন। </p>
+            <p class="jusfify">
+                মধ্যপ্রাচ্যের তেল ফুরিয়ে যেতে পারে, কিন্তু আমাদের
+                ডিজিটাল তেল কখনই ফুরাবে না। অশেষ তেলের ভান্ডার ও নানামুখী তৈলাক্ত সেবা নিয়ে আমাদের এই ডিজিটাল
+                তৈল কোম্পানীর যাত্রা। বিশ্বে আমারাই প্রথম, আমরাই সেরা। খটকা লাগছে? ডিজিটাল তেল! সেটা আবার কি? জানতে
+                হলে নিচের বাটনে ক্লিক করুন। </p>
             <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">বিস্তারিত
                 জানুন</a>
             <p>আমাদের বিভিন্ন সেবাসমূহ সম্পর্কে জানতে ক্রল করুন। </p>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/logo.jpg" alt="The Logo of Digital Oil Company">
         </div>
     </section>
-    <section>
+    <section class="align-center"">
         <div>
-            <h2>আমাদের বিভিন্ন <span class="">সেবাসমূহ</span></h2>
+            <h2 >আমাদের বিভিন্ন <span class=" brand-color">সেবাসমূহ</span></h2>
         </div>
     </section>
-    <section>
-        <div>
-
+    <section class="flex-container">
+        <div class="half-width" id="box-1">
+            <img src="/images/fuel.jpg" alt="Fuel Filling Image">
+            <h3>ডিজিটাল ফুয়েল সেবা</h3>
+            <p>ডিজিটাল ফুয়েল সেবাটির মাধ্যমে আপনি খুব সহজেই অনলাইনে জনপ্রিয়/বিখ্যাত হয়ে যেতে পারেন রাতারাতি। আমদের
+                সুদক্ষ টিম আপনার হয়ে ফেসবুক, টুইটার ও ইউটিউবে বিভিন্ন লুতুপুতু মার্কা পোষ্ট/ভিডিও দিয়ে আপনাকে দ্রুত
+                জনপ্রিয় করে তুলবে।</p>
         </div>
-
-        <div>
-
+        <div class="half-width" id="box-2">
+            <img src="/images/lubeoil.jpg" alt="Lube oil Point Image">
+            <h3>ডিজিটাল লুব সেবা</h3>
+            <p>আপনার পক্ষ থেকে বড় বড় রাঘব বোয়ালদের বিভিন্ন পোষ্ট/ভিডিও/ছবিতে অসংখ্য লাইক/কমেন্ট/শেয়ার করে আপনাকে তাদের
+                কাছে প্রিয় বান্দা/ভক্ত হিসেবে তুলে ধরবে। এতে আপনি শিঘ্রই রুই কাতলা জাতীয় মানুষের প্রিয় পাত্রে পরিণত
+                হবেন।</p>
+        </div>
+        <div class="half-width" id="box-3">
+            <img src="/images/alkatra.jpg" alt="Image of Furnase oil or Bitomin">
+            <h3>
+                ডিজিটাল আলকাতরা সেবা
+            </h3>
+            <p>ডিজিটাল আলকাতরা সেবাটির মাধ্যমে আপনি খুব সহজেই আপনার প্রতিপক্ষকে ঘায়েল করতে পারবেন এবং তার জনপ্রিয়তা
+                শুন্যে নামিয়ে আনতে পারবেন। আমাদের টিম প্রতিপক্ষের দুর্নামযুক্ত অসংখ্য পোষ্ট দিয়ে এবং তার পোষ্টে পচা
+                কমেন্ট করে তাকে পচা ডিমের মত পচিয়ে দিবে!</p>
         </div>
     </section>
-
-
-
-
-
-
-
-    <p>ডিজিটাল তৈল কোম্পানি</p>
+    <section class="flex-container" id="banner1">
+        <div class=" half-width">
+            <img src="/images/experience.jpg" alt="Image of experience">
+        </div>
+        <div class="half-width">
+            <h2>আমাদের রয়েছে সুদক্ষ জনবল</h2>
+            <p>আমাদের রয়েছে একদল সুদক্ষ ও তরুন জনবল। যারা তৈল মর্দনে প্রশিক্ষণপ্রাপ্ত, নির্ভয় এবং উদ্দীপ্ত। গ্রাহককে
+                সর্বোত্তম সেবা দিতে তারা একান্ত বদ্ধপরিকর। যার দরুন ডোনাল্ট ট্রাম্পসহ বহু বিশ্ব নেতা আমাদের রয়েল
+                কাস্টমার। আপনিও আমাদের দলে এখুনি</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগ দিন</a>
+        </div>
+    </section>
+    <section class="flex-container">
+        <div>
+            <h2>২৪ ঘন্টা নিশ্চিত সেবা</h2>
+            <p>আমাদের গ্রাহকদের সার্বক্ষণিক সেবা দেয়ার জন্য আমাদের রয়েছে সর্বোন্নত কল সেন্টার যা প্রতিদিন ২৪ ঘন্টা
+                কল/ইমেইল এবং মেসেজের মাধ্যমে সেবা দিতে প্রস্তুত। আমাদের কল সেন্টারের সেবা নিতে এক্ষুনি</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগাযোগ
+                করুণ</a>
+        </div>
+        <div class=" half-width">
+            <img src="/images/customercare.jpg" alt="Image of call center">
+        </div>
+    </section>
+    <section class="align-center"">
+        <div>
+            <h2 >সাফল্যের পথে, <span class=" brand-color">ডিজিটাল তৈল কোম্পানীর সাথে</span></h2>
+        </div>
+    </section>
+    <section class="flex-container">
+        <div class=" half-width">
+            <img src="/images/customer.jpg" alt="Image of customer partnership">
+        </div>
+        <div class="half-width">
+            <h2>সাফল্যকে হাসিল করুণ</h2>
+            <h2><span class=" brand-color">শর্টকাটে, সহজে, সবার আগে</span></h2>
+            <p>বিশ্বের সকল সফল নেতা, পাতি নেতা আমাদের হাত ধরেই আজ নেতৃত্বের শিখরে! তা একমাত্র ডিজিটাল তৈল মর্দনের
+                মাধ্যমে অর্জিত হয়েছে। তাই আপনিও আমাদের সেবা নিন এবং আজ থেকেই রংয়ের দুনিয়ায় </p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">রক করুন</a>
+        </div>
+    </section>
+    <footer id="footer-background" style="color: white;">
+        <h3>ভেজাইল্লা গ্রুপের একটি <span class="brand-color">অঙ্গপ্রতিষ্ঠান</span></h3>
+        <p>&copy; ২০২২, কপিরাইট আইনে সর্বস্বত্ত সংরক্ষিত। নকল করিলে তেলে চুবানো হবে!</p>
+    </footer>
 </body>
 
 </html>
