--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 ডিজিটাল তেল কখনই ফুরাবে না। অশেষ তেলের ভান্ডার ও নানামুখী তৈলাক্ত সেবা নিয়ে আমাদের এই ডিজিটাল
                 তৈল কোম্পানীর যাত্রা। বিশ্বে আমারাই প্রথম, আমরাই সেরা। খটকা লাগছে? ডিজিটাল তেল! সেটা আবার কি? জানতে
                 হলে নিচের বাটনে ক্লিক করুন। </p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">বিস্তারিত
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">বিস্তারিত
                 জানুন</a>
             <p>আমাদের বিভিন্ন সেবাসমূহ সম্পর্কে জানতে ক্রল করুন। </p>
         </div>
@@ -75,7 +75,7 @@
             <p>আমাদের রয়েছে একদল সুদক্ষ ও তরুন জনবল। যারা তৈল মর্দনে প্রশিক্ষণপ্রাপ্ত, নির্ভয় এবং উদ্দীপ্ত। গ্রাহককে
                 সর্বোত্তম সেবা দিতে তারা একান্ত বদ্ধপরিকর। যার দরুন ডোনাল্ট ট্রাম্পসহ বহু বিশ্ব নেতা আমাদের রয়েল
                 কাস্টমার। আপনিও আমাদের দলে এখুনি</p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগ দিন</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগ দিন</a>
         </div>
     </section>
     <section class="flex-container">
@@ -83,7 +83,7 @@
             <h2>২৪ ঘন্টা নিশ্চিত সেবা</h2>
             <p>আমাদের গ্রাহকদের সার্বক্ষণিক সেবা দেয়ার জন্য আমাদের রয়েছে সর্বোন্নত কল সেন্টার যা প্রতিদিন ২৪ ঘন্টা
                 কল/ইমেইল এবং মেসেজের মাধ্যমে সেবা দিতে প্রস্তুত। আমাদের কল সেন্টারের সেবা নিতে এক্ষুনি</p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগাযোগ
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">যোগাযোগ
                 করুণ</a>
         </div>
         <div class=" half-width">
@@ -104,7 +104,7 @@
             <h2><span class=" brand-color">শর্টকাটে, সহজে, সবার আগে</span></h2>
             <p>বিশ্বের সকল সফল নেতা, পাতি নেতা আমাদের হাত ধরেই আজ নেতৃত্বের শিখরে! তা একমাত্র ডিজিটাল তৈল মর্দনের
                 মাধ্যমে অর্জিত হয়েছে। তাই আপনিও আমাদের সেবা নিন এবং আজ থেকেই রংয়ের দুনিয়ায় </p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">রক করুন</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ali-38a3a3b7/">রক করুন</a>
         </div>
     </section>
     <footer id="footer-background" style="color: white;">
