cannot find wrong

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </section>
     <section class="flex-container">
-        <div>
+        <div class="half-width">
             <h2>২৪ ঘন্টা নিশ্চিত সেবা</h2>
             <p>আমাদের গ্রাহকদের সার্বক্ষণিক সেবা দেয়ার জন্য আমাদের রয়েছে সর্বোন্নত কল সেন্টার যা প্রতিদিন ২৪ ঘন্টা
                 কল/ইমেইল এবং মেসেজের মাধ্যমে সেবা দিতে প্রস্তুত। আমাদের কল সেন্টারের সেবা নিতে এক্ষুনি</p>
