Sorry!NoCodeChange-image-/-removed

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
     </section>
     <section class="flex-container">
         <div class="half-width" id="box-1">
-            <img src="/images/fuel.jpg" alt="Fuel Filling Image">
+            <img src="images/fuel.jpg" alt="Fuel Filling Image">
             <h3>ডিজিটাল ফুয়েল সেবা</h3>
             <p>ডিজিটাল ফুয়েল সেবাটির মাধ্যমে আপনি খুব সহজেই অনলাইনে জনপ্রিয়/বিখ্যাত হয়ে যেতে পারেন রাতারাতি। আমদের
                 সুদক্ষ টিম আপনার হয়ে ফেসবুক, টুইটার ও ইউটিউবে বিভিন্ন লুতুপুতু মার্কা পোষ্ট/ভিডিও দিয়ে আপনাকে দ্রুত
                 জনপ্রিয় করে তুলবে।</p>
         </div>
         <div class="half-width" id="box-2">
-            <img src="/images/lubeoil.jpg" alt="Lube oil Point Image">
+            <img src="images/lubeoil.jpg" alt="Lube oil Point Image">
             <h3>ডিজিটাল লুব সেবা</h3>
             <p>আপনার পক্ষ থেকে বড় বড় রাঘব বোয়ালদের বিভিন্ন পোষ্ট/ভিডিও/ছবিতে অসংখ্য লাইক/কমেন্ট/শেয়ার করে আপনাকে তাদের
                 কাছে প্রিয় বান্দা/ভক্ত হিসেবে তুলে ধরবে। এতে আপনি শিঘ্রই রুই কাতলা জাতীয় মানুষের প্রিয় পাত্রে পরিণত
                 হবেন।</p>
         </div>
         <div class="half-width" id="box-3">
-            <img src="/images/alkatra.jpg" alt="Image of Furnase oil or Bitomin">
+            <img src="images/alkatra.jpg" alt="Image of Furnase oil or Bitomin">
             <h3>
                 ডিজিটাল আলকাতরা সেবা
             </h3>
@@ -68,7 +68,7 @@
     </section>
     <section class="flex-container" id="banner1">
         <div class=" half-width">
-            <img src="/images/experience.jpg" alt="Image of experience">
+            <img src="images/experience.jpg" alt="Image of experience">
         </div>
         <div class="half-width">
             <h2>আমাদের রয়েছে সুদক্ষ জনবল</h2>
@@ -87,7 +87,7 @@
                 করুণ</a>
         </div>
         <div class=" half-width">
-            <img src="/images/customercare.jpg" alt="Image of call center">
+            <img src="images/customercare.jpg" alt="Image of call center">
         </div>
     </section>
     <section class="align-center"">
@@ -97,7 +97,7 @@
     </section>
     <section class="flex-container">
         <div class=" half-width">
-            <img src="/images/customer.jpg" alt="Image of customer partnership">
+            <img src="images/customer.jpg" alt="Image of customer partnership">
         </div>
         <div class="half-width">
             <h2>সাফল্যকে হাসিল করুণ</h2>
